--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -16,15 +16,7 @@
         </div>
     </div>
     <div class="panel-body">
-
-        <a href="#" class="list-group-item clearfix" *ngFor="let contact of contacts">
-            <div class="pull-left">
-                <h4 class="list-group-item-heading">{{ contact.name }}</h4>
-            </div>
-            <span class="pull-right">
-                <img [src]="contact.imageUrl" alt="{{ contact.name }}" class="img-responsive" style="max-height: 50px;">
-            </span>
-        </a>
-
+        <cms-contact-item *ngFor="let contact of contacts" [contact]="contact"
+            (click)="onSelected(contact)"></cms-contact-item>
     </div>
 </div>
