--- a/src/app/documents/document-detail/document-detail.component.css
+++ b/src/app/documents/document-detail/document-detail.component.css
@@ -4,12 +4,16 @@
   padding-right: 1rem;
 }
 
-.margin-left-right{
-  margin-left:1rem;
-  margin-right:1rem;
+.margin-left-right {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
-.pad-left-right{
-  margin-left:1rem;
-  margin-right:1rem;
+.pad-left-right {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.btn {
+  margin: 2px;
 }
