--- a/src/app/documents/document-item/document-item.component.css
+++ b/src/app/documents/document-item/document-item.component.css
@@ -1,9 +1,13 @@
 .documentDiv {
-  width: 9rem;
-  height: 11rem;
+  width: 12rem;
+  height: 14rem;
   margin: 2px;
   font-size: 1.3rem;
   border: solid thin darkgrey;
   float: left;
-  padding: .25rem
+}
+
+h4 {
+  font-size: 1.5rem;
+  margin: 0 auto;
 }
