--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <div class="col-md-5">
-        <cms-document-list (selectedDocumentEvent)="selectedDocument = $event"></cms-document-list>
+    <div class="col-md-6">
+        <cms-document-list></cms-document-list>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-6">
         <cms-document-detail [document]="selectedDocument" *ngIf="selectedDocument"></cms-document-detail>
     </div>
 </div>
