--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <!-- Kyle's CMS App  -->
-<cms-header (selectedFeatureEvent)="switchView($event)"></cms-header>
-<div class="container pull-left" [ngSwitch]="selectedFeature">
-    <cms-documents *ngSwitchCase="'documents'"></cms-documents>
-    <cms-message-list *ngSwitchCase="'messages'"></cms-message-list>
-    <cms-contacts *ngSwitchCase="'contacts'"></cms-contacts>
+<cms-header></cms-header>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
 </div>
