--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -12,11 +12,10 @@
     <div class="panel-heading clearfix">
         <h2 class="panel-title pull-left">Contacts</h2>
         <div class="pull-right">
-            <button class="button btn-success">New Contact</button>
+            <button routerLink="/new" class="button btn-success">New Contact</button>
         </div>
     </div>
     <div class="panel-body">
-        <cms-contact-item *ngFor="let contact of contacts" [contact]="contact"
-            (click)="onSelected(contact)"></cms-contact-item>
+        <cms-contact-item *ngFor="let contact of contacts" [contact]="contact"></cms-contact-item>
     </div>
 </div>
