--- a/src/app/documents/document-detail/document-detail.component.html
+++ b/src/app/documents/document-detail/document-detail.component.html
@@ -1,11 +1,11 @@
-<div class="panel panel-default" xmlns="http://www.w3.org/1999/html">
+<div *ngIf="document" class="panel panel-default" xmlns="http://www.w3.org/1999/html">
   <div class="panel-heading">
     <div class="row pad-all">
       <h4 class="title margin-left-right">{{document.name}}</h4>
       <div class="row pull-right margin-left-right">
-        <a class="btn btn-primary">View</a>
-        <a class="btn btn-info">Edit</a>
-        <a class="btn btn-danger">Delete</a>
+        <a (click)="onView()" class="btn btn-primary">View</a>
+        <a [routerLink]="['../', document.id, 'edit']" class="btn btn-info">Edit</a>
+        <a (click)="onDelete()" class="btn btn-danger">Delete</a>
       </div>
     </div>
   </div>
