--- a/src/app/documents/document-item/document-item.component.html
+++ b/src/app/documents/document-item/document-item.component.html
@@ -1,4 +1,4 @@
-<a href="#" class="list-group-item clearfix documentDiv">
+<a [routerLink]="[document.id]" routerLinkActive="active" class="list-group-item clearfix documentDiv">
   <div class="pull-left">
     <h4 class="list-group-item-heading">{{ document.name }}</h4>
   </div>
