--- a/src/app/documents/documents.component.html
+++ b/src/app/documents/documents.component.html
@@ -4,6 +4,6 @@
     </div>
 
     <div class="col-md-6">
-        <cms-document-detail [document]="selectedDocument" *ngIf="selectedDocument"></cms-document-detail>
+        <router-outlet></router-outlet>
     </div>
 </div>
