--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -12,7 +12,7 @@
     <div class="panel-heading clearfix">
         <h2 class="panel-title pull-left">Contacts</h2>
         <div class="pull-right">
-            <button routerLink="/new" class="button btn-success">New Contact</button>
+            <a routerLink="new" class="btn btn-success">New Contact</a>
         </div>
     </div>
     <div class="panel-body">
