--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -16,6 +16,7 @@
         </div>
     </div>
     <div class="panel-body">
-        <cms-contact-item *ngFor="let contact of contacts" [contact]="contact"></cms-contact-item>
+        <cms-contact-item *ngFor="let contact of contacts" [contact]="contact" dnd-draggable [dragEnabled]="true"
+            [dragData]="contact" [dropZones]="['contactGroup']"></cms-contact-item>
     </div>
 </div>
