--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -9,14 +9,30 @@
     </div>
 </div> -->
 <div class="panel panel-default">
-    <div class="panel-heading clearfix">
-        <h2 class="panel-title pull-left">Contacts</h2>
-        <div class="pull-right">
-            <a routerLink="new" class="btn btn-success">New Contact</a>
+    <div class="row">
+        <div class="col-xs-12">
+            <div class="panel panel-default">
+                <div class="panel-heading extra-pad">
+                    <div class="row">
+                        <span class="title pad-left-right bigger-title">Contacts</span>
+                    </div>
+                    <div class="row">
+                        <div class="input-group pull-left pad-left-right col-xs-7">
+                            <input type="text" class="form-control" placeholder="Enter a search value"
+                                (keyup)="search(searchBox.value)" #searchBox>
+                            <div class="glyphicon glyphicon-search input-group-addon" (click)="search(searchBox.value)">
+                            </div>
+                        </div>
+                        <div class="pull-right pad-left-right">
+                            <a class="btn btn-success" [routerLink]="['new']">New Contact</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="panel-body">
-        <cms-contact-item *ngFor="let contact of contacts" [contact]="contact" dnd-draggable [dragEnabled]="true"
-            [dragData]="contact" [dropZones]="['contactGroup']"></cms-contact-item>
+        <cms-contact-item *ngFor="let contact of contacts | contactsFilter:term" [contact]="contact" dnd-draggable
+            [dragEnabled]="true" [dragData]="contact" [dropZones]="['contactGroup']"></cms-contact-item>
     </div>
 </div>
